Update java_command.md